src/Parser/MinamiKotoriParser.java
// Generated from MinamiKotori.g4 by ANTLR 4.5.3
package Parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MinamiKotoriParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, StringLiteral=35, Sign=36, Decimal_constant=37, 
		New=38, For=39, While=40, If=41, Else=42, Return=43, Break=44, Continue=45, 
		Left_bracket=46, Right_bracket=47, Left_square_bracket=48, Right_square_bracket=49, 
		Left_brace=50, Right_brace=51, Whitespace=52, Identifier=53, Newline=54, 
		BlockComment=55, LineComment=56;
	public static final int
		RULE_program = 0, RULE_declaration = 1, RULE_variable_declaration = 2, 
		RULE_type = 3, RULE_non_array_type = 4, RULE_type_name = 5, RULE_class_declaration = 6, 
		RULE_array_declaration_type = 7, RULE_init_declarator = 8, RULE_declarator = 9, 
		RULE_initializer = 10, RULE_assignment_expression = 11, RULE_assignment_operator = 12, 
		RULE_calculation_expression = 13, RULE_logical_or_expression = 14, RULE_logical_or_operator = 15, 
		RULE_logical_and_expression = 16, RULE_logical_and_operator = 17, RULE_bitwise_or_expression = 18, 
		RULE_bitwise_or_operator = 19, RULE_bitwise_xor_expression = 20, RULE_bitwise_xor_operator = 21, 
		RULE_bitwise_and_expression = 22, RULE_bitwise_and_operator = 23, RULE_equality_expression = 24, 
		RULE_equality_operators = 25, RULE_is_equal_operator = 26, RULE_not_equal_operator = 27, 
		RULE_relation_expression = 28, RULE_relation_operators = 29, RULE_smaller_operator = 30, 
		RULE_bigger_operator = 31, RULE_smaller_equal_operator = 32, RULE_bigger_equal_operator = 33, 
		RULE_shift_expression = 34, RULE_shift_operators = 35, RULE_lshift_operator = 36, 
		RULE_rshift_operator = 37, RULE_add_expression = 38, RULE_add_operators = 39, 
		RULE_plus_operator = 40, RULE_minus_operator = 41, RULE_multiply_expression = 42, 
		RULE_multiply_operators = 43, RULE_multiply_operator = 44, RULE_divide_operator = 45, 
		RULE_mod_operator = 46, RULE_unary_expression = 47, RULE_postfix_expression = 48, 
		RULE_primary_expression = 49, RULE_constant = 50, RULE_integer_constant = 51, 
		RULE_string_constant = 52, RULE_postfix = 53, RULE_get_member_operator = 54, 
		RULE_plusplus_operator = 55, RULE_minusminus_operator = 56, RULE_unary_operator = 57, 
		RULE_not_sign_operator = 58, RULE_bitwise_not_operator = 59, RULE_expression = 60, 
		RULE_function_call_expression = 61, RULE_arguments = 62, RULE_new_operation = 63, 
		RULE_array_new_type = 64, RULE_class_new_type = 65, RULE_builtin_constant = 66, 
		RULE_function_definition = 67, RULE_base_statement = 68, RULE_parameter_list = 69, 
		RULE_parameter = 70, RULE_statement = 71, RULE_assignment_statement = 72, 
		RULE_compound_statement = 73, RULE_loop_statement = 74, RULE_for_loop_statement = 75, 
		RULE_the_first_for_expression = 76, RULE_the_second_for_expression = 77, 
		RULE_the_third_for_expression = 78, RULE_while_loop_statement = 79, RULE_branch_statement = 80, 
		RULE_if_statement = 81;
	public static final String[] ruleNames = {
		"program", "declaration", "variable_declaration", "type", "non_array_type", 
		"type_name", "class_declaration", "array_declaration_type", "init_declarator", 
		"declarator", "initializer", "assignment_expression", "assignment_operator", 
		"calculation_expression", "logical_or_expression", "logical_or_operator", 
		"logical_and_expression", "logical_and_operator", "bitwise_or_expression", 
		"bitwise_or_operator", "bitwise_xor_expression", "bitwise_xor_operator", 
		"bitwise_and_expression", "bitwise_and_operator", "equality_expression", 
		"equality_operators", "is_equal_operator", "not_equal_operator", "relation_expression", 
		"relation_operators", "smaller_operator", "bigger_operator", "smaller_equal_operator", 
		"bigger_equal_operator", "shift_expression", "shift_operators", "lshift_operator", 
		"rshift_operator", "add_expression", "add_operators", "plus_operator", 
		"minus_operator", "multiply_expression", "multiply_operators", "multiply_operator", 
		"divide_operator", "mod_operator", "unary_expression", "postfix_expression", 
		"primary_expression", "constant", "integer_constant", "string_constant", 
		"postfix", "get_member_operator", "plusplus_operator", "minusminus_operator", 
		"unary_operator", "not_sign_operator", "bitwise_not_operator", "expression", 
		"function_call_expression", "arguments", "new_operation", "array_new_type", 
		"class_new_type", "builtin_constant", "function_definition", "base_statement", 
		"parameter_list", "parameter", "statement", "assignment_statement", "compound_statement", 
		"loop_statement", "for_loop_statement", "the_first_for_expression", "the_second_for_expression", 
		"the_third_for_expression", "while_loop_statement", "branch_statement", 
		"if_statement"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "'int'", "'string'", "'bool'", "'void'", "'class'", "'='", 
		"'||'", "'&&'", "'|'", "'^'", "'&'", "'=='", "'!='", "'<'", "'>'", "'<='", 
		"'>='", "'<<'", "'>>'", "'+'", "'-'", "'*'", "'/'", "'%'", "'.'", "'++'", 
		"'--'", "'!'", "'~'", "','", "'true'", "'false'", "'null'", null, null, 
		null, "'new'", "'for'", "'while'", "'if'", "'else'", "'return'", "'break'", 
		"'continue'", "'('", "')'", "'['", "']'", "'{'", "'}'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "StringLiteral", 
		"Sign", "Decimal_constant", "New", "For", "While", "If", "Else", "Return", 
		"Break", "Continue", "Left_bracket", "Right_bracket", "Left_square_bracket", 
		"Right_square_bracket", "Left_brace", "Right_brace", "Whitespace", "Identifier", 
		"Newline", "BlockComment", "LineComment"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MinamiKotori.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MinamiKotoriParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<Function_definitionContext> function_definition() {
			return getRuleContexts(Function_definitionContext.class);
		}
		public Function_definitionContext function_definition(int i) {
			return getRuleContext(Function_definitionContext.class,i);
		}
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinamiKotoriListener ) ((MinamiKotoriListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinamiKotoriListener ) ((MinamiKotoriListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MinamiKotoriVisitor ) return ((MinamiKotoriVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(166);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						setState(164);
						function_definition();
						}
						break;
					case 2:
						{
						setState(165);
						declaration();
						}
						break;
					}
					} 
				}
				setState(170);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(171);
			function_definition();
			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << Identifier))) != 0)) {
				{
				setState(174);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(172);
					function_definition();
					}
					break;
				case 2:
					{
					setState(173);
					declaration();
					}
					break;
				}
				}
				setState(178);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public Variable_declarationContext variable_declaration() {
			return getRuleContext(Variable_declarationContext.class,0);
		}
		public Class_declarationContext class_declaration() {
			return getRuleContext(Class_declarationContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinamiKotoriListener ) ((MinamiKotoriListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinamiKotoriListener ) ((MinamiKotoriListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MinamiKotoriVisitor ) return ((MinamiKotoriVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		try {
			setState(181);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(179);
				variable_declaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(180);
				class_declaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_declarationContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Init_declaratorContext init_declarator() {
			return getRuleContext(Init_declaratorContext.class,0);
		}
		public Variable_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinamiKotoriListener ) ((MinamiKotoriListener)listener).enterVariable_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinamiKotoriListener ) ((MinamiKotoriListener)listener).exitVariable_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MinamiKotoriVisitor ) return ((MinamiKotoriVisitor<? extends T>)visitor).visitVariable_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Variable_declarationContext variable_declaration() throws RecognitionException {
		Variable_declarationContext _localctx = new Variable_declarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variable_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			type();
			setState(184);
			init_declarator();
			setState(185);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Non_array_typeContext non_array_type() {
			return getRuleContext(Non_array_typeContext.class,0);
		}
		public Array_declaration_typeContext array_declaration_type() {
			return getRuleContext(Array_declaration_typeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinamiKotoriListener ) ((MinamiKotoriListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinamiKotoriListener ) ((MinamiKotoriListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MinamiKotoriVisitor ) return ((MinamiKotoriVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type);
		try {
			setState(189);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(187);
				non_array_type();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(188);
				array_declaration_type();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Non_array_typeContext extends ParserRuleContext {
		public Type_nameContext type_name() {
			return getRuleContext(Type_nameContext.class,0);
		}
		public Class_declarationContext class_declaration() {
			return getRuleContext(Class_declarationContext.class,0);
		}
		public Non_array_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_non_array_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinamiKotoriListener ) ((MinamiKotoriListener)listener).enterNon_array_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinamiKotoriListener ) ((MinamiKotoriListener)listener).exitNon_array_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MinamiKotoriVisitor ) return ((MinamiKotoriVisitor<? extends T>)visitor).visitNon_array_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Non_array_typeContext non_array_type() throws RecognitionException {
		Non_array_typeContext _localctx = new Non_array_typeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_non_array_type);
		try {
			setState(193);
			switch (_input.LA(1)) {
			case T__1:
			case T__2:
			case T__3:
			case T__4:
			case Identifier:
				enterOuterAlt(_localctx, 1);
				{
				setState(191);
				type_name();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 2);
				{
				setState(192);
				class_declaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Type_nameContext extends ParserRuleContext {
		public Token builtin_type;
		public TerminalNode Identifier() { return getToken(MinamiKotoriParser.Identifier, 0); }
		public Type_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinamiKotoriListener ) ((MinamiKotoriListener)listener).enterType_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinamiKotoriListener ) ((MinamiKotoriListener)listener).exitType_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MinamiKotoriVisitor ) return ((MinamiKotoriVisitor<? extends T>)visitor).visitType_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Type_nameContext type_name() throws RecognitionException {
		Type_nameContext _localctx = new Type_nameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_type_name);
		int _la;
		try {
			setState(197);
			switch (_input.LA(1)) {
			case T__1:
			case T__2:
			case T__3:
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(195);
				((Type_nameContext)_localctx).builtin_type = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4))) != 0)) ) {
					((Type_nameContext)_localctx).builtin_type = (Token)_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				break;
			case Identifier:
				enterOuterAlt(_localctx, 2);
				{
				setState(196);
				match(Identifier);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_declarationContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(MinamiKotoriParser.Identifier, 0); }
		public TerminalNode Left_brace() { return getToken(MinamiKotoriParser.Left_brace, 0); }
		public TerminalNode Right_brace() { return getToken(MinamiKotoriParser.Right_brace, 0); }
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<DeclaratorContext> declarator() {
			return getRuleContexts(DeclaratorContext.class);
		}
		public DeclaratorContext declarator(int i) {
			return getRuleContext(DeclaratorContext.class,i);
		}
		public Class_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinamiKotoriListener ) ((MinamiKotoriListener)listener).enterClass_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinamiKotoriListener ) ((MinamiKotoriListener)listener).exitClass_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MinamiKotoriVisitor ) return ((MinamiKotoriVisitor<? extends T>)visitor).visitClass_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_declarationContext class_declaration() throws RecognitionException {
		Class_declarationContext _localctx = new Class_declarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_class_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(199);
			match(T__5);
			setState(200);
			match(Identifier);
			setState(201);
			match(Left_brace);
			setState(208);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << Identifier))) != 0)) {
				{
				{
				setState(202);
				type();
				setState(203);
				declarator();
				setState(204);
				match(T__0);
				}
				}
				setState(210);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(211);
			match(Right_brace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Array_declaration_typeContext extends ParserRuleContext {
		public Non_array_typeContext non_array_type() {
			return getRuleContext(Non_array_typeContext.class,0);
		}
		public List<TerminalNode> Left_square_bracket() { return getTokens(MinamiKotoriParser.Left_square_bracket); }
		public TerminalNode Left_square_bracket(int i) {
			return getToken(MinamiKotoriParser.Left_square_bracket, i);
		}
		public List<TerminalNode> Right_square_bracket() { return getTokens(MinamiKotoriParser.Right_square_bracket); }
		public TerminalNode Right_square_bracket(int i) {
			return getToken(MinamiKotoriParser.Right_square_bracket, i);
		}
		public Array_declaration_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array_declaration_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinamiKotoriListener ) ((MinamiKotoriListener)listener).enterArray_declaration_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinamiKotoriListener ) ((MinamiKotoriListener)listener).exitArray_declaration_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MinamiKotoriVisitor ) return ((MinamiKotoriVisitor<? extends T>)visitor).visitArray_declaration_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Array_declaration_typeContext array_declaration_type() throws RecognitionException {
		Array_declaration_typeContext _localctx = new Array_declaration_typeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_array_declaration_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(213);
			non_array_type();
			setState(216); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(214);
				match(Left_square_bracket);
				setState(215);
				match(Right_square_bracket);
				}
				}
				setState(218); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==Left_square_bracket );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Init_declaratorContext extends ParserRuleContext {
		public DeclaratorContext declarator() {
			return getRuleContext(DeclaratorContext.class,0);
		}
		public InitializerContext initializer() {
			return getRuleContext(InitializerContext.class,0);
		}
		public Init_declaratorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init_declarator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinamiKotoriListener ) ((MinamiKotoriListener)listener).enterInit_declarator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinamiKotoriListener ) ((MinamiKotoriListener)listener).exitInit_declarator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MinamiKotoriVisitor ) return ((MinamiKotoriVisitor<? extends T>)visitor).visitInit_declarator(this);
			else return visitor.visitChildren(this);
		}
	}
